Remove remaining servlet references from server-api and server-core
  - Rename servletPath parameter to handlerPath in RequestUriResolver
  - Fix bug: resolveDebugMode(String) was not setting debugFormat,
    causing debug responses to always receive null format
  - Restore 4 debugger tests rewritten against the String-based API
    (were commented out since the old HttpServletRequest API was removed)
  - Update Javadoc in DebugInformation and package-info to use
    framework-agnostic wording